Bug 67799 - MAILMERGE: Pre-Defined Labels Contain No Format Info in LO 4.1.0.4
Summary: MAILMERGE: Pre-Defined Labels Contain No Format Info in LO 4.1.0.4
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1.0.4 release
Hardware: All Linux (All)
: highest major
Assignee: Not Assigned
URL:
Whiteboard: BSA target:4.2.0 target:4.1.1
Keywords: bibisected, regression
: 67381 68243 68516 (view as bug list)
Depends on:
Blocks: mab4.1
  Show dependency treegraph
 
Reported: 2013-08-05 19:29 UTC by Frank Peters
Modified: 2015-12-17 07:22 UTC (History)
10 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Peters 2013-08-05 19:29:18 UTC
In LO 4.1.0.4., when creating a new labels document using:

Files --> New --> Labels

all of the pre-defined label types contain no formatting information.

All formatting fields are set to zero and all labels are set to 1 column x 1 row.

It is impossible to use the pre-defined label types.  The only work around is to manually add a new user type with correct formatting parameters. 

This problem has been reported and confirmed on the Users Global mailing list :

http://listarchives.libreoffice.org/global/users/msg32054.html

I would consider this issue to be very severe.

Operating System: Linux (Other)
Version: 4.1.0.4 release
Last worked in: 4.0.4.2 release
Comment 1 Joel Madero 2013-08-06 19:31:52 UTC
Thank you for reporting this issue! I have been able to confirm the issue on:
Version: 4.2.0.0.alpha0+Build ID: 09a4c4d176ff97ab8ff4027af83a549991667baf
 Date:   Tue Jul 30 19:05:34 2013 +0300 
Platform: Bodhi Linux 2.2 x64

+ + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + +
As I've been able to confirm this problem I am marking as:

New (confirmed)
Major - complete loss of functionality for labels
Highest - regression

Keywords - regression

Whiteboard Status - bibisectrequest

Candidate for 4.1 MAB

+ + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + +
LibreOffice is powered by a team of volunteers, every bug is confirmed (triaged) by human beings who mostly give their time for free. We invite you to join our triaging by checking out this link:
https://wiki.documentfoundation.org/QA/BugTriage and join us on freenode at #libreoffice-qa

There are also other ways to get involved including with marketing, UX, documentation, and of course developing -  http://www.libreoffice.org/get-help/mailing-lists/. 

Lastly, good bug reports help tremendously in making the process go smoother, please always provide reproducible steps (even if it seems easy) and attach any and all relevant material
Comment 2 Terrence Enger 2013-08-06 23:42:25 UTC
bibisect tells me ...

    ac2f1405e6790e3115388f2023272850edb94b9c is the first bad commit
    commit ac2f1405e6790e3115388f2023272850edb94b9c
    Author: Jean-Baptiste Lallement <jean-baptiste.lallement@canonical.com>
    Date:   Fri Feb 15 11:08:24 2013 +0000

        source-hash-c9d2518656ce0fc5e96bb4bf06c0e78a575c2597
    
        commit c9d2518656ce0fc5e96bb4bf06c0e78a575c2597
        Author:     Tor Lillqvist <tml@iki.fi>
        AuthorDate: Thu Feb 14 17:47:39 2013 +0200
        Commit:     Tor Lillqvist <tml@iki.fi>
        CommitDate: Thu Feb 14 17:47:46 2013 +0200
    
            svl, too
    
            Change-Id: Ib7ad7a1045aad03b0e176d5267b4e942521ba023

    :100644 100644 4a93e4f71669c6d7721e0720187b1c726905d34b e7468b542abcdca993f1cfc84153644c435c0f5a M	autogen.log
    :100644 100644 cac30b7895a7624f069adfd91ce12dc9bd879725 c72e19a9fdb0550f9a32e13f1b9450d25c1fb09e M	ccache.log
    :100644 100644 1ecbd59723284c12b83c141730691f644b7d9014 a94de8d477a6fd76a14272bf7caa684f4aabb145 M	commitmsg
    :100644 100644 4b3a1130e5246dcdb93bed8413722ffe05d6b648 1dab28a6c586c6437cce5441528fc4d7d0ad2795 M	dev-install.log
    :100644 100644 904fcdfb50e81ba4bb288ca099711ba5ee80ff7e fa1579ed2b5e0455b505334c549d22e080f2c8e4 M	make.log
    :040000 040000 8f1c34ad06609cbe53fec81ea7e7e1c16a3f1f18 f403533fd36fc056921b0fafd4b5ef1aad1f7a39 M	opt

and `git bisect log` says ...

    # bad: [ac2f1405e6790e3115388f2023272850edb94b9c] source-hash-c9d2518656ce0fc5e96bb4bf06c0e78a575c2597
    # good: [49f457a31b68e98117dcca1ec6014b285b545f9e] source-hash-7c8d4cfb2bc8cb24373791ab9da4cd068baa67eb
    git bisect start 'ac2f140' '49f457a'
    # good: [d5b5ab39a92296e0b5de7ff347bf3f89d4d7a37f] source-hash-8cefe14f428ab5521f10962ff68b02151d1207ad
    git bisect good d5b5ab39a92296e0b5de7ff347bf3f89d4d7a37f

But this seems strange as master, commit 1cf0999, pulled around
2013-07-28 0208 UTC, does not show the bug.  Has the bug been fixed
since the daily bibisect was updated on 2013-07-16?
Comment 3 Joel Madero 2013-08-07 00:01:03 UTC
If bibisect is done we remove bibisectrequest :) Thanks Terrence for taking care of this one
Comment 4 Michael Meeks 2013-08-07 08:48:13 UTC
Matus - this is almost certainly a consequence of the label re-work in 4.1 ? any chance you can take a look ?
Comment 5 Matúš Kukan 2013-08-10 11:10:47 UTC
AFAICS does not happen in debug build.
Should be fixed in master with 5372bbd0136ee8006f0641e1a6afee5c0e07e253.
To be reviewed for libreoffice-4-1: https://gerrit.libreoffice.org/#/c/5336/
Comment 6 Commit Notification 2013-08-10 11:14:07 UTC
Matuš Kukan committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5372bbd0136ee8006f0641e1a6afee5c0e07e253

fdo#67799 read ending item also when assert is noop



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2013-08-10 15:07:54 UTC
Matuš Kukan committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7d8ab35f1f4a069d08b57652f79870fdcfc649af&h=libreoffice-4-1

fdo#67799 read ending item also when assert is noop


It will be available in LibreOffice 4.1.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 crxssi 2013-08-13 14:12:14 UTC
I came on bugzilla to report this exact critical regression, since we just discovered it here in our testing.  Looks like I was a bit late to the party.

Shouldn't this be marked "ASSIGNED"?
Comment 9 Winfried Donkers 2013-08-13 16:18:25 UTC
(In reply to comment #8)
> Shouldn't this be marked "ASSIGNED"?

This bug can marked 'RESOLVED/FIXED', I' ve just done so.
Comment 10 Commit Notification 2013-08-15 15:20:09 UTC
Matuš Kukan committed a patch related to this issue.
It has been pushed to "libreoffice-4-1-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5aa736fa2590cc9dd8501f0f403924681ca09495&h=libreoffice-4-1-1

fdo#67799 read ending item also when assert is noop


It will be available already in LibreOffice 4.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Frank Peters 2013-08-19 14:54:04 UTC
> 
> The patch should be included in the daily builds available at
> http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours.
>

I installed LO 4.1.2.0.0 from the daily builds repository and the labels now function normally.

I was able to create a merge from an address database using one of the pre-formatted label templates.

Hopefully others will report the same.

Thanks for the quick response.
Comment 12 Terrence Enger 2013-08-21 17:45:54 UTC
With master commit 73ab2af, configured with --enable-dbgutil, built
and running of Linux, the problem is fixed.
Comment 13 Thomas van der Meulen [retired] 2013-08-22 16:12:25 UTC
*** Bug 68243 has been marked as a duplicate of this bug. ***
Comment 14 Matúš Kukan 2013-08-24 14:46:36 UTC
*** Bug 67381 has been marked as a duplicate of this bug. ***
Comment 15 Thomas van der Meulen [retired] 2013-08-27 06:38:55 UTC
*** Bug 68516 has been marked as a duplicate of this bug. ***
Comment 16 crxssi 2013-10-07 13:40:45 UTC
I am verifying that this issue is, indeed, fixed in 4.1.2.3.  Thanks!
Comment 17 Robinson Tryon (qubit) 2015-12-17 07:22:38 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]