fdo#67799 read ending item also when assert is noop

Change-Id: I056212d0a01f7a647e846bbd1b605c04e1798a14